Flex 切版任務 - 部落格文章卡片

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             React 核心概念，真正把理論應用在實際專案中。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -50,7 +50,7 @@
             對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -69,7 +69,7 @@
             CSS，打造兼具美感與功能性的網頁。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -87,7 +87,7 @@
             能夠憑藉自學進入前端領域，聽起來令人振奮，但實際過程中可能遇到的挫折與疑慮，卻常常令人猶豫。回想當初我也是對程式一竅不通，卻在興趣的驅使下毅然踏上自學之路。今天想透過這篇文章，分享我的轉職經驗和一些調適心態的秘訣，盼能為有心投入前端領域的你提供一些力量與方向。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -105,7 +105,7 @@
             面試前端工程師時，你或許擔心被問到各種刁鑽的技術題目，或是擔憂無法在短時間內展現實力。其實，許多面試官關注的重點並不僅是程式碼本身，更包含問題解決的流程與溝通能力。這篇文章將分享我在面試過程中常見的三大難題，以及如何以更具條理的方式回應，讓你在面試場合中脫穎而出。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -128,7 +128,7 @@
             的獨特魅力，並透過簡單範例幫助你更順利地切換到新版本的思維模式。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img src="img/photo7.png" alt="Git 與版本控制：前端協作的必修課" />
@@ -145,7 +145,7 @@
             Git 流程，並學會在前端專案中輕鬆管理與協作。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -166,7 +166,7 @@
             SEO 小技巧與實務做法，幫助你顯著提升網站曝光度。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -184,7 +184,7 @@
             前端世界日新月異，第三方套件與工具種類繁多，一個不留神就可能引爆依賴衝突。為了確保專案長期維護的穩定度，建立一套良好的依賴管理與自動化流程至關重要。在本文中，我會分享從套件更新到測試部署的實務經驗，讓你在開發時不再手忙腳亂。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -207,7 +207,7 @@
             TypeScript，並透過真實案例展示它為開發流程帶來的優勢。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
       <li>
         <img
@@ -227,7 +227,7 @@
             寫程式容易，但要確保程式在多種情境、裝置都能正常運行就沒那麼簡單了。這時「測試」便成了維持程式品質的關鍵環節。從最基礎的單元測試，到模擬使用者行為的端對端測試，每一種測試方式都有它的價值與最佳應用情境。本文將帶你認識不同類型的前端測試工具，以及如何在開發流程中實踐自動化測試，打造更穩定、可預期的專案。
           </p>
         </div>
-        <div class="blog-read"><a href="">閱讀內文</a></div>
+        <div class="blog-read"><a href="#">閱讀內文</a></div>
       </li>
     </ul>
   </body>
